<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <group
        android:id="@+id/menu_main"
        android:enabled="true"
        android:menuCategory="container"
        android:visible="true" >
        <item
            android:id="@+id/menu_expand"
            android:checkable="true"
            android:enabled="true"
            android:icon="@drawable/expand"
            android:orderInCategory="1"
            android:title="@string/mnuExpand"
            android:visible="true"/>
        <item
            android:id="@+id/menu_collaps"
            android:checkable="true"
            android:enabled="true"
            android:icon="@drawable/collaps"
            android:orderInCategory="2"
            android:title="@string/mnuCollap"
            android:visible="true"/>
        <item
            android:id="@+id/menu_exit"
            android:checkable="true"
            android:enabled="true"
            android:icon="@android:drawable/ic_menu_close_clear_cancel"
            android:orderInCategory="3"
            android:title="@string/exit"
            android:visible="true"/>
    </group>
    <group
        android:id="@+id/menu_prayer"
        android:enabled="true"
        android:menuCategory="alternative"
        android:visible="true" >
        <item
            android:id="@+id/menu_back"
            android:checkable="true"
            android:enabled="true"
            android:icon="@android:drawable/ic_menu_revert"
            android:title="@string/back"
            android:visible="true">
        </item>
    </group>
    <group
        android:id="@+id/menu_advance"
        android:enabled="true"
        android:menuCategory="system"
        android:visible="true" >
        <item
            android:id="@+id/menu_preference"
            android:icon="@android:drawable/ic_menu_preferences"
            android:title="@string/menu_settings"/>
        <item
            android:id="@+id/menu_info"
            android:checkable="true"
            android:enabled="true"
            android:icon="@android:drawable/ic_menu_info_details"
            android:title="@string/about"
            android:visible="true"/>
    </group>

</menu>